fixed grid, aligned, borders, user-photo, specialities

--- a/app/assets/stylesheets/pages/_junk-show.scss
+++ b/app/assets/stylesheets/pages/_junk-show.scss
@@ -90,7 +90,8 @@
 }
 
 .boxed {
-  border: 1px solid black;
+  border: 1px solid #ADADAD;
+  border-radius: 3px;
   width: 130px;
 
   p {
@@ -106,7 +107,8 @@
   overflow: auto;
   overflow-y: scroll;
   text-align: justify;
-  border: black solid 1px;
+  border: 1px solid #ADADAD;
+  border-radius: 3px;
 
   p {
     font-weight: 400;
