--- a/app/assets/stylesheets/pages/_service-show.scss
+++ b/app/assets/stylesheets/pages/_service-show.scss
@@ -28,12 +28,21 @@
 
 .photo-craft {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 80px;
   justify-content: flex-start;
   margin-left: 220px;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.service-avatar {
+  width: 56px;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .service-show-content {
@@ -41,7 +50,8 @@
   flex-direction: column;
   padding-left: 15px;
   width: 520px;
-  justify-content: space-around;
+  height: 450px;
+  justify-content: space-between;
 }
 
 .address-price {
@@ -90,34 +100,64 @@
 }
 
 #specialities {
+  display: flex;
+  justify-content: flex-start;
   width: 100%;
   height: 70px;
-  background-color: lightgrey;
+  background-color: #F0F0F0;
   border: 1px solid #ADADAD;
   border-radius: 3px;
 }
 
+.specialities-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 4px;
+  margin: 14px;
+  font-weight: 500;
+  border: 1px solid grey;
+  background: white;
+  border-radius: 9999px;
+}
+
 .middle-part {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 60px;
+  margin-right: 80px;
 }
 
 .right-container {
   display: flex;
   flex-direction: column;
+  height: 450px;
+  justify-content: space-between;
+}
+
+#grid {
+  margin-top: 15px;
 }
 
 .service-small-image-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-  gap: 10px;
+  grid-template-columns: auto auto;
+  /* gap: 10px; */
 }
 
-.small-image {
-  height: 65px;
-  margin: 10px 0;
+.service-small-image {
+  height: 90px;
+  margin: 5px 15px;
   cursor: pointer;
   display: block;
   padding: 5px
+}
+
+.contact-craftperson {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 10px;
 }
 
 /* Style the Image Used to Trigger the Modal */
